--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,9 @@ body {
   overflow-x: hidden;
 }
 
+
+
+
 .logo img {
   width: 100px;
   height: 100px;
@@ -368,6 +371,17 @@ transform: translateX(0%);
 
 
 
+@keyframes anim{
+  0%{
+    transform: scale(0%) translateY(-100px);
+    opacity:0
+  }
+  100%{
+    transform: scale(100%) translateY(0px);
+    opacity:1
+  }
+}
+
 
 @keyframes undefined-easeOutBounce {
 	0% {
@@ -620,6 +634,19 @@ background-color: red;
 /* Section */
 .home {
   margin: 4rem 0 0 0;
+  transition: all 0.3s linear;
+  
+}
+
+.home.active{
+ opacity: 0;
+}
+
+
+
+
+.home-img active{
+ border: 2px solid red;
 }
 
 .projects-content {
@@ -663,12 +690,14 @@ background-color: red;
 
 .about {
   margin-top: 11rem;
+ 
 }
 
 .about img {
   width: 55%;
   margin-top: 3.2rem;
 }
+
 
 @keyframes circleMovement {
   from {
