--- a/styles/style.css
+++ b/styles/style.css
@@ -20,9 +20,11 @@ body {
 
 
 .logo img {
+  
   width: 100px;
-  height: 100px;
+  height: 100%;
   pointer-events: none;
+  border-bottom-right-radius: 2px;
 }
 
 #home {
