--- a/styles/style.css
+++ b/styles/style.css
@@ -464,7 +464,16 @@ transform: translateX(0%);
   border-radius: 1rem;
   display: flex;
   align-items: center;
+  transform:translateY(-200%);
+  opacity: 0;
 }
+
+.tchnologies-item.active{
+
+  transform:translateY(0%);
+  opacity:1;
+}
+
 
 .tchnologies-item:hover{
   box-shadow: 0px 3px 5px rgba(41, 33, 61, 0.147);;
@@ -932,3 +941,5 @@ background-color: red;
     margin-top: 6rem;
   }
 }
+
+
